# libnumbertext

./: .travis.yml  AUTHORS  COPYING  CalcAddIn.xcu  ChangeLog  Makefile  Makefile.am  Makefile.orig  NEWS  README  README.md  Soros.html  Soros.js  THANKS  configure.ac  description.xml  description.xml.in  libnumbertext.pc.in  reg.uno.py
data/: Hung.sor  Makefile.am  Roman.sor  Roman_2.sor  Suzhou.sor  af.sor  af_ZA.sor  bg.sor  ca.sor  ca_ES.sor  cs.sor  cs_CZ.sor  da.sor  de.sor  de_DE.sor  el.sor  el_EL.sor  en.sor  en_IN.sor  en_US.sor  en_US_2.sor  eo.sor  es.sor  es_ES.sor  et.sor  fi.sor  fi_FI.sor  fr.sor  fr_BE.sor  fr_CH.sor  fr_FR.sor  gl.sor  he.sor  he_IL.sor  hr.sor  hu.sor  hu_HU.sor  hu_Hung.sor  is.sor  it.sor  (+47 more)
doc/: Tutorial_1.sor  Tutorial_2.sor  Tutorial_3.sor  Tutorial_4.sor  Tutorial_5.sor  addnewlocale.txt  format.txt  numbertext.odt  sorosspec.odt
idl/: XNumberText.idl  XNumberText.urd  buildrdb.sh
java/: .gitignore  Makefile  Manifest.txt  pom.xml
java/org/numbertext/: Numbertext.java  Soros.java
java/src/main/java/org/numbertext/: Numbertext.java  Soros.java
java/src/main/org/numbertext/: MenuState.java  Numbertext.java  Soros.java
pkg-desc/: pkg-description.txt
pythonpath/: Convert.py  ConvertTitles.py  Makefile  locales.sh  numbertextplaces.py
pythonpath/org/Numbertext/: Soros.py  __init__.py  locales.py  places.py
pythonpath/org/openoffice/comp/addin/sample/python/: numbertext.py
rdb/: sample.rdb
src/: Makefile.am  Numbertext.cxx  Numbertext.hxx  Soros.cxx  Soros.hxx  Soros.js  Soros.py  numbertext-version.h.in  numbertext.cxx  soros.py  soroside.py  spellout.cxx
test/: Makefile  es.in  hu_Hung.in  hu_Hung.out  ro.in  ro.out  test  test.py  test.sh  test0.test  test1.in  test1.out  test1.sor  test2.in  test2.out  test2.sor  test2.test  test3.in  test3.out  test3.sor  test4.out  test4.sor  test5.in  test5.out  test5.sor  test6.sor  test7.in  test7.out  test7.sor  thaicheck.ods
tests/: Makefile.am  es.in  es.out  es.test  test.sh
web/: AUTHORS.html.in  Makefile  Soros.html.in  index.html.in
web/webroot/: about.html  numbertext.css
web/webroot/css/: numbertext.css
